--- a/themes/hugo-bootstrap-premium/layouts/section/page.html
+++ b/themes/hugo-bootstrap-premium/layouts/section/page.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-sm-{{ if .Site.Params.showRightSidebar }}9{{ else }}12{{ end }}">
       {{ .Render "single.hat" }}
-      {{ .Render "single.content" }} <h1>test</h1>
+      {{ .Render "single.content" }}
       {{ .Render "single.boot" }}
     </div>
     {{ if .Site.Params.showRightSidebar }}
