--- a/themes/hugo-bootstrap-premium/layouts/partials/base/imports.html
+++ b/themes/hugo-bootstrap-premium/layouts/partials/base/imports.html
@@ -12,7 +12,8 @@
 
 <link rel="stylesheet" href="{{ "css/font-awesome.min.css" | absURL }}">
 <link rel="stylesheet" href="{{ "css/style.css" | absURL }}">
-
+<link rel="stylesheet" href="{{ "css/ip.css" | absURL }}">
+<link rel="stylesheet" href="{{ "css/video.css" | absURL }}">
 {{ if isset .Site.Params "highlight" }}
   <link rel="stylesheet" href="{{ "css/highlight/" | absURL }}{{ .Site.Params.highlight }}.css">
 {{ else }}
