--- a/themes/hugo-bootstrap-premium/static/css/ip.css
+++ b/themes/hugo-bootstrap-premium/static/css/ip.css
@@ -187,7 +187,7 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default .navbar-brand:focus,
 .navbar-default .navbar-brand:active,
 .navbar-default .navbar-brand.active {
-color: #fec503;
+color: #444444;
 }
 
 .navbar-default .navbar-collapse {
