--- a/themes/hugo-bootstrap-premium/static/css/video.css
+++ b/themes/hugo-bootstrap-premium/static/css/video.css
@@ -321,6 +321,10 @@ background-size: cover;
     #video_background {
         display: none;
     }
+    .video #bgVideo {
+    overflow: hidden;
+    height: 750px;
+    }
 }
 
 @media (max-width:1200px) {
