--- a/themes/hugo-bootstrap-premium/static/css/style.css
+++ b/themes/hugo-bootstrap-premium/static/css/style.css
@@ -13,7 +13,7 @@ body {
 }
 .footer {
   position: absolute;
-  bottom: 0;
+  bottom: -75px;
   //margin-top: 3rem;
   width: 100%;
   text-align: left;
