--- a/themes/hugo-bootstrap-premium/static/css/video.css
+++ b/themes/hugo-bootstrap-premium/static/css/video.css
@@ -331,6 +331,9 @@ background-size: cover;
 }
 
 @media (max-width:1200px) {
+    .background {
+        background: url('https://res.cloudinary.com/dtnahfj7l/image/upload/v1506463352/gowifiinstruction-min_gwcttn.jpg') center center / cover no-repeat;
+    }	
     .card-header {
       margin-left:0;
       margin-top: 40px;
